<resources>
    <string name="app_name">WanAndroid</string>
    <string name="first_index">首页</string>
    <string name="second_index">体系</string>
    <string name="third_index">导航</string>
    <string name="search_menu">搜索</string>
    <string name="webview_title">内容</string>
    <string name="register_btn">注册</string>
    <string name="login_btn">登录</string>
    <string name="my_collected">我的收藏</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_app">退出应用</string>
    <string name="about_app">关于应用</string>
    <string name="login_user">用户名：</string>
    <string name="login_pwd">密码：</string>
    <string name="login_commit_pwd">确认密码：</string>
    <string name="login_send">确认</string>
    <string name="toast_disCollect_success">取消收藏成功</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="search_hot_words">搜索热词</string>
    <string name="search_result">搜索结果</string>
    <string name="loading_next_page">加载更多</string>
</resources>
