<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt_login_dialog_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@color/colorMain"
        style="@android:style/TextAppearance.Material.Headline"/>
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/login_user"
            android:textSize="18sp"/>
        <com.example.wanandroid.view.EditTextWithDelete
            android:id="@+id/edt_login_username"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/login_pwd"
            android:textSize="18sp"/>
        <com.example.wanandroid.view.EditTextWithDelete
            android:id="@+id/edt_login_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:padding="5dp"
        android:id="@+id/ll_login_fragment_commit_pwd"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/login_commit_pwd"
            android:textSize="18sp"/>
        <com.example.wanandroid.view.EditTextWithDelete
            android:id="@+id/edt_login_re_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_main_button"
        android:layout_gravity="end"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/login_send"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"/>
</LinearLayout>

