<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#3f9be7">
    <ImageView
        android:id="@+id/img_setting_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/btn_register"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn_system_item"
            android:text="@string/register_btn"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/txt_login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_btn"
            android:textSize="16sp"
            android:background="@drawable/shape_btn_system_item"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/shape_btn_system_item"
        android:layout_marginTop="20dp"
        android:paddingLeft="35dp"
        android:paddingTop="20dp">
        <LinearLayout
            android:id="@+id/ll_setting_item_collected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_collected"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="18sp"
                android:textColor="@color/colorMain"
                android:text="@string/my_collected"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_setting_item_about"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_about"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="18sp"
                android:textColor="@color/colorMain"
                android:text="@string/about_app"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_setting_item_exit_login"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exit_login"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="18sp"
                android:textColor="@color/colorMain"
                android:text="@string/exit_login"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_setting_item_exit_app"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exit_app"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="18sp"
                android:textColor="@color/colorMain"
                android:text="@string/exit_app"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>